Fixing the pos and spacing of the iframe
Added the iframe into a div container to help me work the size of it.

added margins in the styles sheet for my hero container

--- a/styles.css
+++ b/styles.css
@@ -69,10 +69,12 @@ nav ul li {
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
 
 .hero-content {
     text-align: center;
+    margin: 80px;
 }
 
 .hero-content h2 {
